adding publish directory

--- a/style.css
+++ b/style.css
@@ -430,6 +430,21 @@ main {
   text-align: center;
 }
 
+.aspect-ratio {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+
+.aspect-ratio iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+
 /* Modal styles */
 
 .modal-photo {
