--- a/style.css
+++ b/style.css
@@ -11,11 +11,20 @@ button:focus {
   outline: 0;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: brandon-grotesque, sans-serif;
   font-weight: 400;
   font-style: normal;
+
+  min-height: 100%;
+
+  display: flex;
+  flex-direction: column;
 }
 
 /* Navigation bar styles START */
@@ -26,6 +35,7 @@ header {
   background: white;
   z-index: 10;
   width: 100%;
+  height: 124px;
 }
 
 /* .logo {
@@ -49,7 +59,7 @@ nav {
   z-index: 10;
   padding-bottom: 6px;
   padding-top: 6px;
-  top: 16%;
+  top: 130px;
   left: 0;
   width: 100%;
   transform: scale(1,0);
@@ -99,7 +109,7 @@ nav a:hover {
   top: 0;
   left: 0;
   margin-left: 2em;
-  height: 14%;
+  height: inherit;
   display: flex;
   align-items: center;
 }
@@ -523,6 +533,7 @@ main {
 
 footer {
   display: flex;
+  margin-top: auto;
   justify-content: flex-end;
   background: var(--green);
 }
@@ -531,6 +542,14 @@ footer p {
   color: white;
   text-align: center;
   padding-right: 15px;
+}
+
+
+/* Thicker mobile footer */
+@media screen and (max-width: 1475px) {
+ footer {
+   padding: 3em;
+ }
 }
 
 /* Footer styles END */
